[project]
name = "radio-rumble-nyc"
version = "0.1.0"
description = "Radio Rumble feed creator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.35.99",
    "mutagen>=1.47.0",
] # locking boto3 due to Backblaze compatibility https://www.backblaze.com/docs/cloud-storage-use-the-aws-sdk-for-python-with-backblaze-b2

[dependency-groups]
dev = [
    "boto3-stubs>=1.37.9",
]
